<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.blackboard.platform.lmsintegrations</groupId>
    <artifactId>LMSIntegrationsHandler</artifactId>
    <version>1.0</version>

    <name>LMS Integrations Handlers</name>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>11</jdk.version>
        <junit5.version>5.7.1</junit5.version>
        <mockito.version>3.12.4</mockito.version>
        <powermock.version>2.0.9</powermock.version>
        <assertj.version>3.21.0</assertj.version>
        <lmsIntegrationsServiceLayer.version>1.0</lmsIntegrationsServiceLayer.version>
        <surefire.version>3.0.0-M1</surefire.version>
        <shade.plugin.version>3.2.4</shade.plugin.version>
        <clover.version>4.4.1</clover.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit5.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit5.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit5.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.blackboard.platform.lmsintegrations</groupId>
            <artifactId>LMSIntegrationsServicesLayer</artifactId>
            <version>${lmsIntegrationsServiceLayer.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${shade.plugin.version}</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <id>create-course-membership-handler</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer">
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>com.blackboard.platform.lmsintegrations:LMSIntegrationsHandler</artifact>
                                    <excludes>
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CourseMembershipCountHandler*</exclude> 
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CreateUserHandler*</exclude> 
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CheckUserExistsHandler*</exclude> 
                                    </excludes>
                                </filter>
                            </filters>
                            <finalName>CreateCourseMembershipHandler-1.0</finalName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>course-membership-count-handler</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer">
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>com.blackboard.platform.lmsintegrations:LMSIntegrationsHandler</artifact>
                                    <excludes>
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CreateCourseMembershipHandler*</exclude>    
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CreateUserHandler*</exclude> 
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CheckUserExistsHandler*</exclude>  
                                    </excludes>
                                </filter>
                            </filters>
                            <finalName>CourseMembershipCountHandler-1.0</finalName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>create-user-handler</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer">
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>com.blackboard.platform.lmsintegrations:LMSIntegrationsHandler</artifact>
                                    <excludes>
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CourseMembershipCountHandler*</exclude> 
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CreateCourseMembershipHandler*</exclude>
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CheckUserExistsHandler*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <finalName>CreateUserHandler-1.0</finalName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>check-user-exists-handler</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer">
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>com.blackboard.platform.lmsintegrations:LMSIntegrationsHandler</artifact>
                                    <excludes>
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CourseMembershipCountHandler*</exclude> 
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CreateUserHandler*</exclude> 
                                        <exclude>com/blackboard/platform/extensions/lmsintegrations/handlers/CreateCourseMembershipHandler*</exclude> 
                                    </excludes>
                                </filter>
                            </filters>
                            <finalName>CheckUserExistsHandler-1.0</finalName>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.github.edwgiz</groupId>
                        <artifactId>maven-shade-plugin.log4j2-cachefile-transformer</artifactId>
                        <version>2.8.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.openclover</groupId>
                <artifactId>clover-maven-plugin</artifactId>
                <version>${clover.version}</version>
                <configuration>
                    <generatePdf>false</generatePdf>
                    <generateXml>true</generateXml>
                    <generateHtml>false</generateHtml>
                    <generateJson>false</generateJson>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                    </argLine>
                    <classpathDependencyExcludes>
                        <classpathDependencyExclude>org.apache.logging.log4j:log4j-slf4j18-impl</classpathDependencyExclude>
                    </classpathDependencyExcludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>